# chess-game

./: CMakeLists.txt  main.cpp
include/: Controller.h
include/model/: ChessBoard.h  ChessGame.h  ChessPiece.h  ChessPlayer.h
include/model/pieces/: ChessPawn.h
include/view/: GameView.h
include/view/component/: BoardPanel.h  SideBarPanel.h  TileButton.h
include/view/tools/: Component.h  MainPanel.h  View.h
src/: Controller.cpp
src/model/: ChessBoard.cpp  ChessGame.cpp  ChessPiece.cpp  ChessPlayer.cpp
src/view/: GameView.cpp
src/view/component/: BoardPanel.cpp  SideBarPanel.cpp  TileButton.cpp
src/view/tools/: Component.cpp  MainPanel.cpp  View.cpp
